
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IP_OFFSET ;
 char* connback ;
 long inet_addr (char*) ;

void changeip(char *ip) {
 char *ptr;
 ptr=connback+IP_OFFSET;

 *((long *)ptr)=inet_addr(ip);
}
