; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23183.c_changeip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23183.c_changeip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@connback = common dso_local global i8* null, align 8
@IP_OFFSET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @changeip(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** @connback, align 8
  %5 = load i32, i32* @IP_OFFSET, align 4
  %6 = sext i32 %5 to i64
  %7 = getelementptr inbounds i8, i8* %4, i64 %6
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @inet_addr(i8* %8)
  %10 = load i8*, i8** %3, align 8
  %11 = bitcast i8* %10 to i64*
  store i64 %9, i64* %11, align 8
  ret void
}

declare dso_local i64 @inet_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
